--- a/Kids_English_Story/app/src/main/res/layout/activity_home.xml
+++ b/Kids_English_Story/app/src/main/res/layout/activity_home.xml
@@ -10,47 +10,51 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="89dp"
+        android:background="@color/cam_nhat"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="12dp"
-        android:background="@color/pink">
+        android:paddingVertical="12dp">
+
         <TextView
             android:id="@+id/textViewAppTitleHome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kids English Story"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_alignParentStart="true"/>
+            android:text="Kids English Story"
+            android:textColor="@color/cam"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <Button
             android:id="@+id/btn_logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Đăng xuất"
-            android:background="?attr/selectableItemBackground"
-            android:textColor="@android:color/white"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:background="?attr/selectableItemBackground"
+            android:text="Đăng xuất"
+            android:textColor="@color/cam" />
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/layoutAgeSelectionContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:paddingTop="16dp"
+        android:orientation="horizontal"
         android:paddingStart="16dp"
+        android:paddingTop="16dp"
         android:paddingEnd="16dp"
         android:paddingBottom="8dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:text="Chọn độ tuổi:"
-            android:textSize="16sp"
-            android:layout_marginEnd="8dp"/>
+            android:textSize="16sp" />
+
         <Spinner
             android:id="@+id/spinnerAgeSelection"
             android:layout_width="0dp"
@@ -67,7 +71,7 @@
         android:paddingTop="20dp"
         android:paddingBottom="12dp"
         android:text="Chọn chủ đề học nào bé ơi:"
-        android:textColor="@color/pink"
+        android:textColor="@color/cam"
         android:textSize="20sp"
         android:textStyle="bold|italic" />
 
