--- a/Kids_English_Story/app/src/main/res/layout/activity_story_list.xml
+++ b/Kids_English_Story/app/src/main/res/layout/activity_story_list.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#FFF7F0" tools:context=".StoryListActivity">
+    android:background="#FFE5C8" tools:context=".StoryListActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="81dp"
+        android:layout_height="108dp"
         android:background="@color/cam_nhat"
         android:paddingHorizontal="16dp">
 
@@ -20,7 +20,7 @@
             android:layout_centerInParent="true"
             android:text="Truyện Theo Chủ Đề"
             android:textColor="@color/cam"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
     </RelativeLayout>
 
