--- a/Kids_English_Story/app/src/main/res/layout/activity_home.xml
+++ b/Kids_English_Story/app/src/main/res/layout/activity_home.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#FFF7F0"
+    android:background="#FFE5C8"
     tools:context=".HomeActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="89dp"
+        android:layout_height="109dp"
         android:background="@color/cam_nhat"
         android:paddingHorizontal="16dp"
         android:paddingVertical="12dp">
@@ -34,7 +34,8 @@
             android:layout_centerVertical="true"
             android:background="?attr/selectableItemBackground"
             android:text="Đăng xuất"
-            android:textColor="@color/cam" />
+            android:textColor="@color/cam"
+            android:textSize="16sp" />
     </RelativeLayout>
 
     <LinearLayout
@@ -72,7 +73,7 @@
         android:paddingBottom="12dp"
         android:text="Chọn chủ đề học nào bé ơi:"
         android:textColor="@color/cam"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold|italic" />
 
     <ScrollView
