--- a/Kids_English_Story/app/src/main/res/layout/activity_splash.xml
+++ b/Kids_English_Story/app/src/main/res/layout/activity_splash.xml
@@ -5,106 +5,128 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8CFB3"  tools:context=".SplashActivity">
+    android:background="@color/cam_nhat"  tools:context=".SplashActivity">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
+        android:layout_width="554dp"
+        android:layout_height="991dp"
+        android:layout_marginTop="108dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.735"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/anh2" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="378dp"
-        android:layout_height="62dp"
-        android:layout_marginTop="156dp"
-        android:fontFamily="@font/agbalumo"
-        android:text="WELLCOME TO YOUR"
-        android:textColor="#F44336"
-        android:textSize="37sp"
+        android:layout_width="415dp"
+        android:layout_height="195dp"
+        android:layout_marginTop="316dp"
+        android:fontFamily="@font/adlam_display"
+        android:text="WELLCOME TO YOUR LITTLE BOOK"
+        android:textColor="@color/cam"
+        android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/agbalumo"
-        android:text="LITTLE BOOK"
-        android:textColor="#F44336"
-        android:textSize="40sp"
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="49dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="136dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.27"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/star" />
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="76dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="52dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toEndOf="@+id/imageView9"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/star" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="228dp"
+        android:layout_height="132dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="380dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/star" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="440dp"
+        android:layout_height="232dp"
+        android:layout_marginStart="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10"
+        app:layout_constraintVertical_bias="0.346"
+        app:srcCompat="@drawable/star" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="515dp"
+        android:layout_height="162dp"
+        android:layout_marginBottom="208dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.238"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/circle" />
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="624dp"
-        android:layout_height="171dp"
-        android:layout_marginEnd="96dp"
-        android:layout_marginBottom="870dp"
+        android:layout_width="754dp"
+        android:layout_height="295dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="796dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/circle" />
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="388dp"
-        android:layout_height="154dp"
-        android:layout_marginEnd="128dp"
+        android:layout_width="438dp"
+        android:layout_height="162dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/circle" />
 
     <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="49dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="80dp"
+        android:id="@+id/imageView11"
+        android:layout_width="188dp"
+        android:layout_height="160dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="208dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.146"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/star" />
+        app:srcCompat="@drawable/circle" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="166dp"
-        android:layout_height="134dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginBottom="68dp"
+        android:layout_width="312dp"
+        android:layout_height="216dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="128dp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/imageView8"
+        app:layout_constraintStart_toStartOf="@+id/imageView11"
         app:srcCompat="@drawable/circle" />
-
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="119dp"
-        android:layout_height="122dp"
-        android:layout_marginBottom="108dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/circle" />
-
-    <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="76dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="52dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.925"
-        app:layout_constraintStart_toEndOf="@+id/imageView9"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/star" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
