--- a/Kids_English_Story/app/src/main/res/values/colors.xml
+++ b/Kids_English_Story/app/src/main/res/values/colors.xml
@@ -2,15 +2,15 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="purple">#EBD6FD</color>
-    <color name="cam">#FF5722</color>
-    <color name="cam_nhat">#FAD7CC</color>
+    <color name="purple">#FFDAB9</color>
+    <color name="cam">#F29705</color>
+    <color name="cam_nhat">#A0D9D9</color>
     <color name="dark_purple">#E5AC75E9</color>
     <color name="pink">#F6B7F3</color>
     <color name="yellow">#FFE99D</color>
     <color name="mint">#AAF1CB</color>
     <color name="gray">#C5CFD6</color>
-    <color name="blue">#45BCF2</color>
+    <color name="blue">#B2DFDB</color>
     <color name="light">#E9E9FF</color>
 
 </resources>
